[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Images/Puzzle/puzzle.png" type="Texture" id=1]
[ext_resource path="res://InteractableItems/Puzzle.gd" type="Script" id=2]

[node name="Puzzle" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -144.0
margin_right = 144.0
margin_bottom = 144.0
color = Color( 0.482353, 0.482353, 0.482353, 0.654902 )

[node name="Button" type="Button" parent="ColorRect"]
margin_left = 261.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 27.0
text = "X"

[node name="GridContainer" type="GridContainer" parent="ColorRect"]
margin_left = 37.0
margin_top = 33.0
margin_right = 251.0
margin_bottom = 247.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 11
custom_constants/hseparation = 11
columns = 3
__meta__ = {
"_edit_group_": true
}

[node name="p0" type="Control" parent="ColorRect/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p0"]
position = Vector2( 32, 32 )
rotation = 6.28319
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3

[node name="p1" type="Control" parent="ColorRect/GridContainer"]
margin_left = 75.0
margin_right = 139.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p1"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 1

[node name="p2" type="Control" parent="ColorRect/GridContainer"]
margin_left = 150.0
margin_right = 214.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p2"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 2

[node name="p3" type="Control" parent="ColorRect/GridContainer"]
margin_top = 75.0
margin_right = 64.0
margin_bottom = 139.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p3"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 3

[node name="p4" type="Control" parent="ColorRect/GridContainer"]
margin_left = 75.0
margin_top = 75.0
margin_right = 139.0
margin_bottom = 139.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p4"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 4

[node name="p5" type="Control" parent="ColorRect/GridContainer"]
margin_left = 150.0
margin_top = 75.0
margin_right = 214.0
margin_bottom = 139.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p5"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 5

[node name="p6" type="Control" parent="ColorRect/GridContainer"]
margin_top = 150.0
margin_right = 64.0
margin_bottom = 214.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p6"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 6

[node name="p7" type="Control" parent="ColorRect/GridContainer"]
margin_left = 75.0
margin_top = 150.0
margin_right = 139.0
margin_bottom = 214.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p7"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 7

[node name="p8" type="Control" parent="ColorRect/GridContainer"]
margin_left = 150.0
margin_top = 150.0
margin_right = 214.0
margin_bottom = 214.0
rect_min_size = Vector2( 64, 64 )
rect_pivot_offset = Vector2( 32, 32 )

[node name="Sprite" type="Sprite" parent="ColorRect/GridContainer/p8"]
position = Vector2( 32, 32 )
scale = Vector2( 4.14583, 4.14583 )
texture = ExtResource( 1 )
hframes = 3
vframes = 3
frame = 8

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="gui_input" from="ColorRect/GridContainer/p0" to="." method="_on_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p1" to="." method="_on_p1_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p2" to="." method="_on_p2_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p3" to="." method="_on_p3_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p4" to="." method="_on_p4_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p5" to="." method="_on_p5_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p6" to="." method="_on_p6_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p7" to="." method="_on_p7_gui_input"]
[connection signal="gui_input" from="ColorRect/GridContainer/p8" to="." method="_on_p8_gui_input"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
